fixes for swagger pt. 3
